//
//
//  Generated by StarUML(tm) C++ Add-In
//
//  @ Project : Untitled
//  @ File Name : DownloadManager.h
//  @ Date : 19.12.2025
//  @ Author : 
//
//


#if !defined(_DOWNLOADMANAGER_H)
#define _DOWNLOADMANAGER_H

#include "User.h"
#include "CloudFile.h"
#include "CloudStorage.h"
#include "DownloadTask.h"

class DownloadManager {
public:
	List<DownloadTask> tasks;
	unsigned short maxConcurrent;
	void startDownload(User user, CloudFile file, CloudStorage storage);
	void cancelDownload(DownloadTask task);
};

#endif  //_DOWNLOADMANAGER_H
