//
//
//  Generated by StarUML(tm) C++ Add-In
//
//  @ Project : Untitled
//  @ File Name : CloudFile.h
//  @ Date : 19.12.2025
//  @ Author : 
//
//


#if !defined(_CLOUDFILE_H)
#define _CLOUDFILE_H


class CloudFile {
public:
	String fileName;
	String fileSize;
	String getFileInfo();
	List<Byte> read();
};

#endif  //_CLOUDFILE_H
