//
//
//  Generated by StarUML(tm) C++ Add-In
//
//  @ Project : Untitled
//  @ File Name : VideoFile.h
//  @ Date : 19.12.2025
//  @ Author : 
//
//


#if !defined(_VIDEOFILE_H)
#define _VIDEOFILE_H

#include "CloudFile.h"

class VideoFile : public CloudFile {
public:
	String resolution;
	String getResolution();
	List<Byte> read();
};

#endif  //_VIDEOFILE_H
