@startuml
' Диаграмма классов — процесс скачивания файла из облачного хранилища

' --- Классы и интерфейс ---
interface Account {
  - String id
  - DateTime created
  - boolean active
}

class Admin {
  + manage(User user, CloudStorage storage)
  - boolean superAdmin
}

class User {
  - String name
  - int age
  - boolean verified
  - long quotaBytes
  + requestDownload(CloudFile file, DownloadManager manager) : void
  + listFiles(CloudStorage storage) : void
}

class CloudFile {
  - String fileName
  - int fileSize
  - DateTime createdAt
  - boolean encrypted
  + getFileInfo() : String
  + read() : byte[]
}

class VideoFile {
  - String resolution
  - long durationSec
  - int bitrateKbps
  + String getResolution() : String
  + read() : byte[]
}

class CloudStorage {
  - String storageName
  - List<CloudFile> files
  - long totalSpaceBytes
  - long usedSpaceBytes
  + void addFile(CloudFile file)
  + CloudFile fetchFile(String fileName, User requester) : CloudFile
}

class DownloadManager {
  - List<DownloadTask> tasks
  - int maxConcurrent
  - long timeoutMs
  + void startDownload(User user, CloudFile file, CloudStorage storage) : void
  + void cancelDownload(DownloadTask task) : void
}

class DownloadTask {
  - int partNumber
  - String status
  + void start(CloudFile file, User user) : void
  + void cancel() : void
  + byte[] getPartData() : byte[]
  - int retryCount
  - boolean completed
}

' --- Отношения ---
' Обобщение (наследование)
Admin <|- User
CloudFile <|-- VideoFile

' Ассоциация: User использует DownloadManager (метод requestDownload)
User "1" --> "1" DownloadManager
User "1" --> "1" CloudStorage

' Агрегация: CloudStorage агрегирует CloudFile (файлы существуют независимо)
CloudStorage "1" o-- "*" CloudFile

' Композиция: DownloadManager композитно содержит DownloadTask (жизненный цикл задач внутри менеджера)
DownloadManager "1" *-- "*" DownloadTask

' Зависимости (пунктирные): методы используют другие классы в параметрах
DownloadManager ..> CloudStorage
DownloadTask ..> CloudFile

' Реализация
Account <|.. User

@enduml



В ходе выполнения лабораторной работы были изучены возможности прямого и обратного проектирования с использованием UML-диаграмм классов и языка программирования C++. При генерации кода на основе диаграммы классов было установлено, что полученный программный код в целом формируется корректно: сохраняются модификаторы доступа, структура классов, атрибуты и методы, а также создаются заголовочные файлы и файлы реализации для каждого класса. Методы представлены в виде корректных заглушек, пригодных для последующей ручной доработки.

Вместе с тем выявлены ограничения автоматической генерации. В частности, не во всех случаях в заголовочные файлы добавляются директивы include для классов, используемых в качестве параметров методов или атрибутов, если они не заданы по ссылке или указателю. Это может приводить к потере информации о связях между классами и требует ручного исправления сгенерированного кода. При этом корректно заданные типы данных переносятся без изменений.

При выполнении обратного проектирования было установлено, что восстановление диаграммы классов из кода осуществляется менее точно. В зависимости от выбранных настроек генерации часть связей может быть представлена в виде атрибутов, либо не восстановлена вовсе. Обобщение и реализация интерфейсов, как правило, переносятся корректно, однако ассоциации и зависимости между классами часто требуют ручной доработки.

Таким образом, сделан вывод, что прямое проектирование из UML в код работает удовлетворительно, тогда как обратное проектирование из кода в диаграмму требует внимательного анализа и ручной корректировки, поскольку автоматические средства не всегда полностью и однозначно восстанавливают исходную структуру модели.

